--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "facultad_app",
-    "short_name": "facultad_app",
+    "name": "Credencial FRSN",
+    "short_name": "Credencial FRSN",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FFFFFF",
+    "theme_color": "#4B0082",
+    "description": "Aplicación Credencial Universitaria de la facultad FRSN",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
